[gd_scene load_steps=2 format=3 uid="uid://b5ksiay3x8n4g"]

[ext_resource type="Script" path="res://1.Codebase/src/scripts/ui/prayer_system.gd" id="1_prayer"]
[ext_resource type="Texture2D" uid="uid://praytomonster" path="res://1.Codebase/src/assets/ui/praytoMonster.png" id="2_monster"]

[node name="PrayerSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prayer")

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="PrayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PrayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PrayerPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PrayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "向飛天意粉神禱告"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonsterImage" type="TextureRect" parent="PrayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_monster")
stretch_mode = 3


[node name="Description" type="Label" parent="PrayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "說出你的願望，飛天意粉神會以祂的方式回應...
（警告：神的回應可能出乎意料）"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PrayerInput" type="TextEdit" parent="PrayerPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "例如：
「希望世界和平」
「讓所有人快樂」
「消除所有負能量」
..."
wrap_mode = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="PrayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SubmitButton" type="Button" parent="PrayerPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "開始禱告"

[node name="CancelButton" type="Button" parent="PrayerPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[node name="HomeButton" type="Button" parent="PrayerPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "回主選單"

[node name="WarningLabel" type="Label" parent="PrayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "現實感知 < 30 時，禱告效果會更加扭曲"
horizontal_alignment = 1

[connection signal="pressed" from="PrayerPanel/MarginContainer/VBoxContainer/ButtonsContainer/SubmitButton" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="PrayerPanel/MarginContainer/VBoxContainer/ButtonsContainer/CancelButton" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PrayerPanel/MarginContainer/VBoxContainer/ButtonsContainer/HomeButton" to="." method="_on_home_pressed"]
